--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -11,11 +11,11 @@
 // DOCS: http://dev.w3.org/csswg/css-device-adapt/
 // =============================================================================
 @if $isResponsive == 1 {
-	@-webkit-viewport { width: device-width; }
-		 @-moz-viewport { width: device-width; }
-			@-ms-viewport { width: device-width; }
-			 @-o-viewport { width: device-width; }
-					@viewport { width: device-width; }
+  @-webkit-viewport { width: device-width; }
+     @-moz-viewport { width: device-width; }
+      @-ms-viewport { width: device-width; }
+       @-o-viewport { width: device-width; }
+          @viewport { width: device-width; }
 }
 
 
@@ -59,7 +59,7 @@ $ Logos
 /* =============================================================================
 $ Searchforms
 ================================================================================ */
-.searchform {
+/*form*/.searchform {
 	position: absolute;
 	right: 30px;
 	top: 30px;
