--- a/Assets/_scss/globals/_normalize.scss
+++ b/Assets/_scss/globals/_normalize.scss
@@ -1,6 +1,6 @@
 /* ==========================================================
- * normalize.scss (v 1.0.1)
- * Updated: 08/19/2012
+ * normalize.scss (v 2.0.1)
+ * Updated: 09/10/2012
  * 
  * Normalize the browser-default styling
  * DOCS: http://necolas.github.com/normalize.css/
@@ -37,8 +37,10 @@ audio,
 canvas,
 video {
 	display: inline-block;
-	*display: inline;
-	*zoom: 1;
+	@if $isOldIE == 1 { 
+		*display: inline;
+		*zoom: 1;
+	}
 }
 
 /*
@@ -73,23 +75,24 @@ $ Base
  */
 
 html {
-	font-size: 100%; /* 1 */
+	@if $isOldIE == 1 { font-size: 100%; /* 1 */ }
 	-webkit-text-size-adjust: 100%; /* 2 */
 	-ms-text-size-adjust: 100%; /* 2 */
 }
-/*
- * Addresses `font-family` inconsistency between `textarea` and other form
- * elements.
- */
+@if $isOldIE == 1 { 
+	/*
+	 * Addresses `font-family` inconsistency between `textarea` and other form
+	 * elements.
+	 */
 
-html,
-button,
-input,
-select,
-textarea {
-	font-family: $baseFontFamily;
-	color: $baseColor;
-	font-weight: $baseFontWeight;
+	html,
+	button,
+	input,
+	select,
+	textarea {
+		font-family: $baseFontFamily;	
+		font-weight: $baseFontWeight;
+	}
 }
 
 /*
@@ -98,6 +101,7 @@ textarea {
 
 body {
 	margin: 0;
+	color: $baseColor;
 	font-size: $baseFontSize;
 	line-height: $baseLineHeight;
 	background: $bodyBackground;
@@ -151,10 +155,6 @@ strong {
 	font-weight: bold;
 }
 
-blockquote {
-	margin: 1em 40px;
-}
-
 /*
  * Addresses styling not present in S5, Chrome.
  */
@@ -172,13 +172,15 @@ mark {
 	color: #000;
 }
 
-/*
- * Addresses margins set differently in IE6/7.
- */
+@if $isOldIE == 1 { 
+	/*
+	 * Addresses margins set differently in IE6/7.
+	 */
 
-p,
-pre {
-	margin: 1em 0;
+	p,
+	pre {
+		margin: 1em 0;
+	}
 }
 
 /*
@@ -191,7 +193,7 @@ kbd,
 pre,
 samp {
 	font-family: $monoFontFamily;
-	_font-family: 'courier new', monospace;
+	@if $isOldIE == 1 { _font-family: 'courier new', monospace; }
 	font-size: 1em;
 }
 
@@ -213,14 +215,16 @@ q {
 	quotes: none;
 }
 
-/*
- * Addresses `quotes` property not supported in S4.
- */
+@if $isOldIE == 1 { 
+	/*
+	 * Addresses `quotes` property not supported in S4.
+	 */
 
-q:before,
-q:after {
-	content: '';
-	content: none;
+	q:before,
+	q:after {
+		content: '';
+		content: none;
+	}
 }
 
 small {
@@ -248,43 +252,45 @@ sub {
 	bottom: -0.25em;
 }
 
-/* ==========================================================================
-   Lists
-   ========================================================================== */
+@if $isOldIE == 1 { 
+	/* ==========================================================================
+	   Lists
+	   ========================================================================== */
 
-/*
- * Addresses margins set differently in IE6/7.
- */
+	/*
+	 * Addresses margins set differently in IE6/7.
+	 */
 
-dl,
-menu,
-ol,
-ul {
-	margin: 1em 0;
-}
+	dl,
+	menu,
+	ol,
+	ul {
+		margin: 1em 0;
+	}
 
-dd {
-	margin: 0 0 0 40px;
-}
+	dd {
+		margin: 0 0 0 40px;
+	}
 
-/*
- * Addresses paddings set differently in IE6/7.
- */
+	/*
+	 * Addresses paddings set differently in IE6/7.
+	 */
 
-menu,
-ol,
-ul {
-	padding: 0 0 0 40px;
-}
+	menu,
+	ol,
+	ul {
+		padding: 0 0 0 40px;
+	}
 
-/*
- * Corrects list images handled incorrectly in IE7.
- */
+	/*
+	 * Corrects list images handled incorrectly in IE7.
+	 */
 
-nav ul,
-nav ol {
-	list-style: none;
-	list-style-image: none;
+	nav ul,
+	nav ol {
+		list-style: none;
+		list-style-image: none;
+	}
 }
 
 /* =============================================================================
@@ -299,7 +305,7 @@ $ Embedded content
 
 img {
 	border: 0; /* 1 */
-	-ms-interpolation-mode: bicubic; /* 2 */
+	@if $isOldIE == 1 { -ms-interpolation-mode: bicubic; /* 2 */ }
 }
 
 /*
@@ -328,12 +334,14 @@ figure {
 $ Forms
 ========================================================================== */
 
-/*
- * Corrects margin displayed oddly in IE6/7.
- */
+@if $isOldIE == 1 { 
+	/*
+	 * Corrects margin displayed oddly in IE6/7.
+	 */
 
-form {
-	margin: 0;
+	form {
+		margin: 0;
+	}
 }
 
 /*
@@ -355,8 +363,10 @@ fieldset {
 legend {
 	border: 0; /* 1 */
 	padding: 0;
-	white-space: normal; /* 2 */
-	*margin-left: -7px; /* 3 */
+	@if $isOldIE == 1 { 
+		white-space: normal; /* 2 */
+		*margin-left: -7px; /* 3 */
+	}
 }
 
 /*
@@ -371,8 +381,10 @@ select,
 textarea {
 	font-size: 100%; /* 1 */
 	margin: 0; /* 2 */
-	vertical-align: baseline; /* 3 */
-	*vertical-align: middle; /* 3 */
+	@if $isOldIE == 1 { 
+		vertical-align: baseline; /* 3 */
+		*vertical-align: middle; /* 3 */
+	}
 }
 
 /*
@@ -401,7 +413,9 @@ input[type="reset"],
 input[type="submit"] {
 	-webkit-appearance: button; /* 2 */
 	cursor: pointer; /* 3 */
-	*overflow: visible;  /* 4 */
+	@if $isOldIE == 1 { 
+		*overflow: visible;  /* 4 */
+	}
 }
 
 /*
@@ -424,8 +438,10 @@ input[type="checkbox"],
 input[type="radio"] {
 	box-sizing: border-box; /* 1 */
 	padding: 0; /* 2 */
-	*height: 13px; /* 3 */
-	*width: 13px; /* 3 */
+	@if $isOldIE == 1 { 
+		*height: 13px; /* 3 */
+		*width: 13px; /* 3 */
+	}
 }
 
 /*
