Inline-Block $isOldIE support

--- a/Assets/_scss/_settings/_placeholders.scss
+++ b/Assets/_scss/_settings/_placeholders.scss
@@ -24,9 +24,11 @@
 	display: -moz-inline-stack;
 	-moz-box-orient: vertical;
 	display: inline-block;
-	*display: inline;
-	vertical-align: top;
-	*zoom: 1;
+	@if $isOldIE == 1 { 
+		*display: inline;
+		vertical-align: top;
+		*zoom: 1;
+	}
 }
 
 // ======================== Sprites ===============================
