--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -20,7 +20,7 @@
 
 
 /* =============================================================================
-$ Maincontainer
+$ Site-wrapper
 ================================================================================ */
 .wrapper {
 	margin: 0 auto;
@@ -53,6 +53,7 @@ $ Logos
 		top: 30px;
 		left: 30px;
 	}
+	#footer & {}
 }
 
 
