SCSS Syntax for .ir

--- a/Assets/_scss/globals/_helper.scss
+++ b/Assets/_scss/globals/_helper.scss
@@ -15,13 +15,12 @@
 		/* IE 6/7 fallback */
 		*text-indent: -9999px;
 	}
-}
-
-.ir:before {
-	content: "";
-	display: block;
-	width: 0;
-	height: 100%;
+	&:before {
+		content: "";
+		display: block;
+		width: 0;
+		height: 100%;
+	}
 }
 
 /* Hide from both screenreaders and browsers: h5bp.com/u */
