--- a/Assets/_scss/modules/_tables.scss
+++ b/Assets/_scss/modules/_tables.scss
@@ -16,9 +16,7 @@ table {
 }
 th {
 	padding: 7px 8px 3px;
-	text-align: left; // UA-Style is centered
-	font-weight: 400;
-	color: darken( $baseColor, 30% );
+	text-align: left;
 }
 td { padding: 9px 8px 7px; }
 
