--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -33,6 +33,7 @@ $columnGutter:	 				20px;	// Inner spacing
 // =============================================================================
 $layoutWidth:						960px + $columnGutter; // Grid Setup
 $bodyBackground:				#fff;
+$contentBackground:			$bodyBackground; // Used for generating some colors
 
 $query-tablet: 					800px; // Tablets
 $query-smartphoneLarge: 480px; // Phone - Landscape
@@ -84,7 +85,7 @@ $linkColorHover:				lighten($cd-main, 20%);
 // =============================================================================
 // Borders
 // =============================================================================
-$basicBorderColor:			#ccc;
+$basicBorderColor:			darken($contentBackground, 20%);
 $basicBorderStyle:			solid;
 
 
