--- a/Assets/_scss/modules/_typography.scss
+++ b/Assets/_scss/modules/_typography.scss
@@ -33,9 +33,15 @@ $ Headings
 	font-family: $headingsFontFamily;
 	font-weight: $headingsFontWeight;
 	color: $headingsColor;
-	margin: 1em 0 0;
+	line-height: 1.1;
+	margin: 0 0 1em;
 	text-rendering: optimizeLegibility; // Optimized kerning for large font sizes
 	@include hyphens;
+	small {
+		font-size: 60%;
+		color: lighten($headingsColor, 20%);
+		line-height: 0;
+	}
 }
 h1, .h1 {
 	font-size: 34px;
@@ -50,11 +56,11 @@ h4, .h4 {
 	font-size: 22px;
 }
 h5, .h5 {
-	font-size: 20px;
+	font-size: 18px;
 	margin: 0;
 }
 h6, .h6 {
-	font-size: 18px;
+	font-size: 16px;
 	margin: 0;
 }
 
