Added Relative Size support
http://stitchcss.com/#relative_size

--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -54,10 +54,10 @@ $serifFontFamily:				Georgia, "Times New Roman", Times, serif;
 $monoFontFamily:				Menlo, Monaco, Consolas, "Courier New", monospace;
 
 // ========================== Base font settings ==========================
-$baseFontSize:					16px;
+$baseFontSize:					16;
 $baseFontFamily:				$sansFontFamily;
 $baseFontWeight:				$regular;
-$baseLineHeight:				1.5;
+$baseLineHeight:				24;
 $baseColor:							#3C474B;
 
 // =============================== Headings ===============================
