--- a/Assets/_scss/_settings/_functions.scss
+++ b/Assets/_scss/_settings/_functions.scss
@@ -27,3 +27,21 @@
 @function gridCalc($colNumber, $totalColumns) {
 	@return ($columWidth * $colNumber) + ($columnGutter * ($colNumber - 1));
 }
+
+
+// =============================================================================
+// Relative Size
+// =============================================================================
+// Desired font-size ÷ font-size of containing element, or more succinctly:
+// target ÷ context = result
+
+// Based on the relative-size function from Stitch, http://stitchcss.com/
+// To use rems, pass in `rem` as the last parameter
+@function relative-size( $target, $context: $baseFontSize, $unit: em ) {
+  @return #{$target/$context}$unit;
+}
+
+// Short alias
+@function rs( $target, $context: $baseFontSize, $unit: em ) {
+  @return relative-size( $target, $context, $unit );
+}
