--- a/Assets/_scss/globals/_normalize.scss
+++ b/Assets/_scss/globals/_normalize.scss
@@ -90,8 +90,7 @@ html {
 	input,
 	select,
 	textarea {
-		font-family: $baseFontFamily;	
-		font-weight: $baseFontWeight;
+		font-family: $baseFontFamily;
 	}
 }
 
@@ -102,8 +101,7 @@ html {
 body {
 	margin: 0;
 	color: $baseColor;
-	font-size: $baseFontSize;
-	line-height: $baseLineHeight;
+	font: $baseFontWeight #{$baseFontSize/16*100}%/($baseLineHeight/$baseFontSize ) $baseFontFamily;
 	background: $bodyBackground;
 	-webkit-font-smoothing: antialiased;
 }
