--- a/Assets/_scss/globals/_t3-general.scss
+++ b/Assets/_scss/globals/_t3-general.scss
@@ -10,7 +10,7 @@
 $ General stylings
 ================================================================================ */
 .intend { padding: 0 20px; }
-.csc-textpic-caption { font-size: $baseFontSize -3; }
+.csc-textpic-caption { font-size: $baseFontSize - 3+px; }
 .align-center	{ text-align: center; }
 .align-right 	{ text-align: right; }
 .align-left 	{ text-align: left; }
