--- a/Assets/_scss/globals/_base.scss
+++ b/Assets/_scss/globals/_base.scss
@@ -81,7 +81,7 @@ $ Chromeframe
 	height: 41px;
 	border-bottom: 1px $basicBorderStyle #e7db9c;
 	background: #faf6e8;
-	font-size: 12px;
+	font-size: rs(12);
 	line-height: 41px;
 	color: $cd-darkGray;	
 	text-align: center;
