--- a/Assets/_scss/modules/_typography.scss
+++ b/Assets/_scss/modules/_typography.scss
@@ -44,19 +44,19 @@ $ Headings
 }
 h1, .h1 {
 	font-size: rs(34);
-	margin: 0 0 rs(21,34);
+	margin: 0 0 rs(21, 34);
 }
 h2, .h2 {
 	font-size: rs(28);
-	margin: 0 0 rs(18,28);
+	margin: 0 0 rs(18, 28);
 }
 h3, .h3 {
 	font-size: rs(24);
-	margin: 0 0 rs(16,24);
+	margin: 0 0 rs(16, 24);
 }
 h4, .h4 {
 	font-size: rs(22);
-	margin: 0 0 rs(16,22);
+	margin: 0 0 rs(16, 22);
 }
 h5, .h5 {
 	font-size: rs(18);
