--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -54,8 +54,8 @@ $serifFontFamily:				Georgia, "Times New Roman", Times, serif;
 $monoFontFamily:				Menlo, Monaco, Consolas, "Courier New", monospace;
 
 // ========================== Base font settings ==========================
-$baseFontSize:					16;
-$baseLineHeight:				24;
+$baseFontSize:					16; // px
+$baseLineHeight:				24; // px
 $baseFontFamily:				$sansFontFamily;
 $baseFontWeight:				$regular;
 $baseColor:							#3C474B;
@@ -71,13 +71,17 @@ $headingsColor:					#000;
 // Basic Colors
 // =============================================================================
 // ======================== Coporate Design colors ========================
-$cd-main:								#0097d7;
-$cd-lightGray:					#AAA;
-$cd-darkGray:						#333;
+$cd-primary:						#0097d7;
+$cd-primaryLight:				lighten($cd-primary, 20%);
+$cd-primaryDark:				darken($cd-primary, 30%);
+
+$cd-secondary:					#38464b;
+$cd-primaryLight:				lighten($cd-secondary, 20%);
+$cd-primaryDark:				darken($cd-secondary, 30%);
 
 // ================================= Links ================================
-$linkColor:							$cd-main;
-$linkColorHover:				lighten($cd-main, 20%);
+$linkColor:							$cd-primary;
+$linkColorHover:				$cd-primaryLight;
 
 
 // =============================================================================
