--- a/Assets/_scss/modules/_navigations.scss
+++ b/Assets/_scss/modules/_navigations.scss
@@ -10,14 +10,12 @@
 $ Navigations
 ================================================================================ */
 .nav {
-	ul { @extend %reset-list; }
-	li {
-		float: left;
-		&:hover a {}
-		&.active a {}
-	}
+	ul { @extend %reset-list;	}
+	li { @extend %inline-block; }
 	a {
 		display: block;
+		&:hover { }
+		li.active & { }
 	}
 }
 
@@ -29,14 +27,24 @@ $ Navigations
 		right: 250px;
 		top: 30px;
 	}
+	ul { }
+	li { }
+	a {	}
 }
 
 /* ======================== Footer Navigation ======================== */
 /*.nav*/.footer-nav {
 	// Footer Navigation
+	#footer & { }
+	ul { }
+	li { }
+	a {	}
 }
 
 /* ======================== Breadcrumb Navigation ======================== */
 /*.nav*/.breadcrumb {
 	// Breadcrumb Navigation
+	ul { }
+	li { }
+	a {	}
 }
