--- a/Assets/_scss/modules/_forms.scss
+++ b/Assets/_scss/modules/_forms.scss
@@ -46,7 +46,17 @@ input[type="submit"] {
 /* =============================================================================
 $ General styling of Form Fields
 ================================================================================ */
+form {
+	ol { list-style: none; }
+	legend { display: none; }
+}
 label {
 	@extend %inline-block;
 	font-size: rs(14);
+	strong {
+
+	}
+	em {
+
+	}
 }
