Fixed active state on .nav items

--- a/Assets/_scss/modules/_navigations.scss
+++ b/Assets/_scss/modules/_navigations.scss
@@ -14,9 +14,9 @@ $ Navigations
 	li { @extend %inline-block; }
 	a {
 		display: block;
-		&:hover { }
-		li.active & { }
+		&:hover { }		
 	}
+	li.active a { }
 }
 
 /* ======================== Main Navigation ======================== */
