--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -105,7 +105,7 @@
 // .foo {
 // 	float: left;
 // 	width: 1000px;
-// 	background: url(../img/hdpi/foo.png) center center no-repeat;
+// 	background: url(../img/foo.png) center center no-repeat;
 //
 // 	@include respondTo(tablet) {
 // 		float: none;
