Renamed .logo to .siteLogo

--- a/Assets/_scss/common/_base.scss
+++ b/Assets/_scss/common/_base.scss
@@ -44,7 +44,7 @@ $ Site-wrapper
 /* =============================================================================
 $ Logos
 ================================================================================ */
-.logo {
+.siteLogo {
 	@include img-wh('logo.png');
 	background: url('../img/logo.png');
 
