Missing display: block; declaration on .siteLogo

--- a/Assets/_scss/common/_base.scss
+++ b/Assets/_scss/common/_base.scss
@@ -45,6 +45,7 @@ $ Site-wrapper
 $ Logos
 ================================================================================ */
 .siteLogo {
+	display: block;
 	@include img-wh('logo.png');
 	background: url('../img/logo.png');
 
