--- a/Assets/_scss/modules/_typography.scss
+++ b/Assets/_scss/modules/_typography.scss
@@ -10,7 +10,10 @@
 $ Links and other stuff
 ================================================================================ */
 a,
-a:visited { color: $linkColor; text-decoration: none; }
+a:visited {
+	color: $linkColor;
+	text-decoration: none;
+}
 a {
 	&:hover,
 	&:active { color: $linkColorHover; }
