--- a/Assets/_scss/modules/_typography.scss
+++ b/Assets/_scss/modules/_typography.scss
@@ -82,7 +82,10 @@ dl { margin: 0 0 rs($baseLineHeight); }
 /* =============================================================================
 $ Attachements & Images
 ================================================================================ */
-embed, iframe, object, img { max-width: 100%; height: auto; }
+embed, iframe, object, img {
+	max-width: 100%; /* Make images responsive */
+	height: auto; /* Ignore height attributes */
+}
 
 
 /* =============================================================================
