label placeholder, Cleaning the /img/ folder

--- a/Assets/_scss/modules/_forms.scss
+++ b/Assets/_scss/modules/_forms.scss
@@ -64,6 +64,7 @@ label {
 $ Searchforms
 ================================================================================ */
 /*form*/.searchform {
+	label {}
 	input {
 		float: left;
 		display: block;
