Renamed $baseColor to $baseTextColor

--- a/Assets/_scss/_settings/_settings.scss
+++ b/Assets/_scss/_settings/_settings.scss
@@ -58,7 +58,7 @@ $baseFontSize:					16; // px
 $baseLineHeight:				24; // px
 $baseFontFamily:				$sansFontFamily;
 $baseFontWeight:				$regular;
-$baseColor:							#3C474B;
+$baseTextColor:					#3C474B;
 
 // =============================== Headings ===============================
 $headingsLineHeight:		1.1;
