--- a/Assets/_scss/modules/_tables.scss
+++ b/Assets/_scss/modules/_tables.scss
@@ -11,6 +11,7 @@ $ Tables
 ================================================================================ */
 table {
 	width: 100%;
+	margin: 0 0 ($baseLineHeight/$baseFontSize) + em;
 	caption {	text-align: left; }
 }
 th {
