--- a/Assets/_scss/common/_normalize.scss
+++ b/Assets/_scss/common/_normalize.scss
@@ -261,12 +261,12 @@ sub {
 	 * Addresses margins set differently in IE6/7.
 	 */
 
-	dl,
-	menu,
-	ol,
-	ul {
-		margin: 1em 0;
-	}
+	// dl,
+	// menu,
+	// ol,
+	// ul {
+	// 	margin: 1em 0;
+	// }
 
 	dd {
 		margin: 0 0 0 40px;
