--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -32,14 +32,13 @@
 }
 
 // ======================== REM Unit Mixin ===============================
-@mixin font-size($size, $is-important: false) {
-	@if $is-important {
-		font-size: $size + px !important;
-		font-size: ($size / 10) + rem !important;
-	} @else {
-		font-size: $size + px;
-		font-size: ($size / 10) + rem;
-	}
+// Create a fully formed type style (sizing and vertical rhythm) by passing in a
+// single value, e.g.:
+// Thanks to Harry Roberts (@csswizardry)
+@mixin font-size($size) {
+	font-size:$size +px;
+	font-size:$size / $baseFontSize +rem;
+	line-height:ceil($size / $baseLineHeight) * ($baseLineHeight / $size);
 }
 
 // ======================== CSS3 Triangle ===============================
