Added quick float classes

--- a/Assets/_scss/common/_helper.scss
+++ b/Assets/_scss/common/_helper.scss
@@ -6,6 +6,14 @@
  * ========================================================== */
 
 
+/* Quick floats */
+.fl-r {
+	float: right;
+}
+.fl-l {
+	float: left;
+}
+
 /* For image replacement */
 .ir {
 	background-color: transparent;
