--- a/Assets/_scss/modules/_typography.scss
+++ b/Assets/_scss/modules/_typography.scss
@@ -109,6 +109,10 @@ ol { list-style-type: decimal; }
 ol ol { list-style: upper-alpha; }
 ol ol ol { list-style: lower-roman; }
 ol ol ol ol { list-style: lower-alpha; }
+li > ul,
+li > ol {  /* 1 */
+    margin-bottom:0;
+}
 
 
 /* =============================================================================
