Generating the .siteLogo position

--- a/Assets/_scss/common/_base.scss
+++ b/Assets/_scss/common/_base.scss
@@ -54,8 +54,8 @@ $ Logos
 
 	#header & {
 		position: absolute;
-		top: 30px;
-		left: 30px;
+		top: 10px;
+		left: $columnGutter / 2;
 	}
 	#footer & {}
 }
