--- a/Assets/_scss/common/_grid.scss
+++ b/Assets/_scss/common/_grid.scss
@@ -9,7 +9,7 @@
 /* =============================================================================
 $ Variables
 ================================================================================ */
-$columWidth:				$layoutWidth / $totalColumns - $columnGutter !default;
+$columWidth:				($layoutWidth + $columnGutter) / $totalColumns - $columnGutter !default;
 
 
 /* =============================================================================
@@ -19,6 +19,8 @@ $ Grid Classes
 .columns {
 	float: left;
 	margin: 0 $columnGutter / 2;
+	&.first { margin-left: 0; }
+	&.last { margin-right: 0; }
 }
 
 .row {
