--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -5,6 +5,7 @@
 // Merges all listed stylesheets and does the SASS & Compass magic
 // DOCS: http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
 // ==========================================================
+@charset "UTF-8";
 
 
 // =============================================================================
