--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -36,9 +36,9 @@
 // single value, e.g.:
 // Thanks to Harry Roberts (@csswizardry)
 @mixin font-size($size) {
-	font-size:$size +px;
-	font-size:$size / $baseFontSize +rem;
-	line-height:ceil($size / $baseLineHeight) * ($baseLineHeight / $size);
+	font-size: $size +px;
+	font-size: $size / $baseFontSize +rem;
+	line-height: ceil($size / $baseLineHeight) * ($baseLineHeight / $size);
 }
 
 // ======================== CSS3 Triangle ===============================
@@ -60,7 +60,7 @@
 	// .foo { @include css-triangle(5px, #fff, bottom); }
 }
 
-// ======================== OldIE-Class fixes =============================== >>> Requires SASS 3.2 <<<<
+// ======================== OldIE-Class fixes ===============================
 @mixin ie6 {
 	.lt-ie7 & {
 		@content;
@@ -85,7 +85,7 @@
 //	}
 
 
-// ======================== Media Queries =============================== >>> Requires SASS 3.2 <<<<
+// ======================== Media Queries ===============================
 @mixin respondTo($media) {
 	@if $media == tablet {
 		@media screen and (min-width:$query-smartphoneLarge +1px) and (max-width:$query-tablet) { @content; }
