--- a/Assets/_scss/common/_helper.scss
+++ b/Assets/_scss/common/_helper.scss
@@ -44,8 +44,8 @@
 	height: 1px;
 	margin: -1px;
 	overflow: hidden;
-	padding: 0; position:
-	absolute;
+	padding: 0;
+	position: absolute;
 	width: 1px;
 }
 
