--- a/Assets/_scss/common/_t3-general.scss
+++ b/Assets/_scss/common/_t3-general.scss
@@ -25,13 +25,16 @@ $ CSC-Frames
 .csc-frame-indent3366 { padding-left: $layoutWidth / 3; }
 .csc-frame-indent6633 { padding-right: $layoutWidth / 3; }
 
+.csc-frame-frame1 { }
+.csc-frame-frame2 { }
+
 
 /* =============================================================================
 $ CSC-Menu
 ================================================================================ */
 .csc-menu {
-	li {}
-	a {}
+  li {}
+  a {}
 }
 
 
