--- a/Assets/_scss/_settings/_placeholders.scss
+++ b/Assets/_scss/_settings/_placeholders.scss
@@ -29,3 +29,9 @@
 
 // ======================== Sprites ===============================
 %sprite { background-image: url('../img/sprite.png'); background-repeat: no-repeat; }
+
+// ===================== Simple Replace ===========================
+%replace {
+  font: 0/0 a;
+  text-shadow: none;
+}
